syntax = "proto3";

package generator;

import "common.proto";

service GeneratorController {
    rpc generateItems(GenerateItemsRequest) returns (GenerateItemsResponse);
    rpc generateCharacters(GenerateCharactersRequest) returns (GenerateCharactersResponse);
    rpc generateCharacterGroups(GenerateCharacterGroupsRequest) returns (GenerateCharacterGroupsResponse);
}

message GenerateItemsRequest {
    common.DataSourceEnumDTO source = 1;
    repeated common.GenerationInstructionDTO arr = 2;
}
message GenerateItemsResponse {
    repeated common.ItemDTO arr = 1;
}
message GenerateCharactersRequest {
    common.DataSourceEnumDTO source = 1;
    repeated common.CharacterGenInstructionDTO arr = 2;
}
message GenerateCharactersResponse {
    repeated common.CharacterDTO arr = 1;
}
message GenerateCharacterGroupsRequest {
    common.DataSourceEnumDTO source = 1;
    repeated common.CharacterGroupGenInstructionDTO arr = 2;
}
message GenerateCharacterGroupsResponse {
    repeated GenerateCharactersResponse arr = 1;
}